--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^53.0.22",
-    "expo-constants": "~17.1.7",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.5",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "@supabase/supabase-js": "^2.57.2",
+    "expo": "^46.0.21",
+    "expo-constants": "^16.0.1",
+    "expo-linking": "^6.3.1",
+    "expo-router": "^3.1.0",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.540.0",
     "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native": "^0.76.9",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
