--- a/package.json
+++ b/package.json
@@ -11,25 +11,27 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.57.2",
-    "expo": "^46.0.21",
-    "expo-constants": "^16.0.1",
-    "expo-linking": "^6.3.1",
-    "expo-router": "^3.1.0",
+    "expo": "53.0.22",
+    "expo-constants": "~17.1.7",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.6",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.540.0",
     "react": "19.0.0",
-    "react-native": "^0.76.9",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
