--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.57.2",
-    "expo": "53.0.22",
-    "expo-constants": "~17.1.7",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.6",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.5",
+    "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.540.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "typescript": "~5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
