--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "paths": {
       "@/*": ["./src/*", "./constants/*"]
     },
+    "typeRoots": ["./node_modules/@types", "./env.d.ts"],
   }
 }
